--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.17",
+    "morgan": "^1.10.0",
     "react": "^17.0.1"
   }
 }
